--- a/foundry.toml
+++ b/foundry.toml
@@ -1,22 +1,38 @@
 [profile.default]
-src  = "contracts"
-test = "test"
-out  = "out"
+src = "contracts"
+out = "out"
 libs = ["lib"]
+test = "test"
+cache_path = "cache"
 
+solc_version = "0.8.30"
+evm_version = "cancun"
+
+optimizer = true
+optimizer_runs = 200
+via_ir = false
+
+# Дозволяємо читати тест-вектори (test_vectors/, vectors/, etc.)
 fs_permissions = [
-  { access = "read", path = "./test_vectors" },
-  { access = "read", path = "./vectors" }
+  { access = "read", path = "./" }
 ]
 
-# Вимикаємо всі лінтери
-[profile.default.lint]
-lint_on_build = false
-severity      = []
-exclude_lints = []
-ignore        = []
+[fuzz]
+runs = 256
 
-solhint = { enabled = false }
-solfmt  = { enabled = false }
-solar   = { enabled = false }
+[fmt]
+line_length = 100
 
+# Опційний профіль: вмикається так:
+#   FOUNDRY_PROFILE=via_ir forge test
+# Але ти вже бачив, що іноді solc все одно падає “stack too deep” навіть у via-ir,
+# тому дефолт тримаємо без via_ir.
+[profile.via_ir]
+solc_version = "0.8.30"
+evm_version = "cancun"
+optimizer = true
+optimizer_runs = 200
+via_ir = true
+fs_permissions = [
+  { access = "read", path = "./" }
+]
